tests/baselines/reference/extendsClauseAlreadySeen.errors.txt
tests/cases/compiler/extendsClauseAlreadySeen.ts(4,19): error TS1172: 'extends' clause already seen.


==== tests/cases/compiler/extendsClauseAlreadySeen.ts (1 errors) ====
    class C {
    
    }
    class D extends C extends C {
                      ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
        baz() { }
    }